--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <h1>Qui suis-je ?</h1>
                     <div class="sec">
                         <div class="left">
-                        <img src="images/hothia1.jpg" alt="Ma photo" style="width:170px;height:130px;">
+                        <img src="images/hothia1.JPG" alt="Ma photo" >
 
                          </div>
                             <div class="right"> 
@@ -59,6 +59,7 @@
                                 <p>Formateur en Informatique aux cours transversaux à l'ENO de Kolda</p>
                                 <p>Formateur en Informatique au programme Salmaïtou en partenariat avec l'UNICEF</p>
                             </div>
+                        </div>
                             <h2>Parcours scolaire et Formations</h2>
                             <div class="exp">
                                 <div class="left">
@@ -69,9 +70,7 @@
                                 <p>Apprenant chez Xarala</p>
                                 <p>Licence 3 en Mathématiques-Physique-Informatique spécialité Informatique</p>  
                                 </div>
-                             </div>
-                           
-                        </div>
+                             </div>                    
                     </div>
                 </section>
                 <section class="competences">
@@ -133,7 +132,7 @@
                                 <div class="reco">
                                     <h2>Visual Studio Code</h2>
                                     <div class="left">
-                                        <a href="https://visual-studio-code.fr.uptodown.com/windows/telecharger" target="_blank"><img src="images/visual.png" alt="" style="width:250px;height:200px;"></a>
+                                        <a href="https://visual-studio-code.fr.uptodown.com/windows/telecharger" target="_blank"><img src="images/visual.png" alt="" ></a>
                                     </div>
                                     <div class="right">
                                         <p>Visual Studio Code est un éditeur de code multiplateforme édité par Microsoft. Ce outil destiné aux développeurs supporte plusieurs dizaines de langages de programmation comme le HTML, C++, PHP, Javascript, Markdown, CSS, etc.</p>
